--- a/deteckit/build.gradle
+++ b/deteckit/build.gradle
@@ -43,4 +43,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.tencent:mmkv-static:1.2.7'
 
+    
+    compile supportDependencies.okhttp
+    compile supportDependencies.interceptor
+
 }
